--- a/package.json
+++ b/package.json
@@ -3,8 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
+    "@angular/common": "^5.0.2",
+    "@angular/core": "^5.0.2",
+    "@angular/forms": "^5.0.2",
+    "@angular/platform-browser": "5.2.11",
+    "@ng-bootstrap/ng-bootstrap": "1.0.0",
+    "axios": "^0.21.0",
+    "db": "^3.3.0",
+    "jwt-decode": "^3.0.0",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "rxjs": "^5.5.0",
+    "zone.js": "^0.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
